--- a/src/components/Definitions/Definitions.css
+++ b/src/components/Definitions/Definitions.css
@@ -1,10 +1,8 @@
 .meanings {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
-    scrollbar-width: thin;
-    height: 55vh;
-    border: 10px solid rgb(105, 105, 105);
+    overflow-y: visible;
+    height: 100%;
 
     padding: 10px 20px;
     overflow-x: hidden;
@@ -15,6 +13,32 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
 }
+
+.meanings::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 06px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #6a6a71;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.meanings::-webkit-scrollbar {
+    width: 16px;
+    background-color: #ffffff00;
+    margin: 6px;
+}
+
+.meanings::-webkit-scrollbar-thumb {
+    width: 97%;
+    border-radius: 10px;
+    margin: 1px;
+    padding: 1px;
+    background-color: rgb(32, 32, 50);
+}
+
 .subTitle {
     font-size: 5vw;
     font-family: "Montserrat", sans-serif;
@@ -38,6 +62,7 @@
 .singleMean {
     display: flex;
     flex-direction: column;
+    text-align: justify;
 
     border-radius: 10px;
     padding: 10px 20px;
